--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,125 @@
+/* Header Styles */
+header {
+  background-image: linear-gradient(
+    to right,
+    rgb(59, 108, 194),
+    rgb(48, 61, 141),
+    rgb(35, 7, 85)
+  );
+  height: 4.5em;
+  padding: 0.75em;
+}
+
+h1 {
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
+
+/* Search for a City Styles */
+.card {
+  border: none;
+}
+
+h3 {
+  font-size: 2.2em;
+  font-weight: bold;
+  margin: 0.3em 0 0 0.4em;
+}
+
+form {
+  margin-left: 0.4em;
+  border-bottom: 1px solid rgb(82, 74, 74);
+}
+
+input {
+  width: 100%;
+  height: 2.5em;
+}
+
 .btn {
   display: block;
+  text-align: center;
+  color: #fff;
+  background-color: rgb(59, 108, 194);
+  width: 100%;
+  margin-top: 1em;
 }
+
+/* Previous Search Buttons Styles */
+.previousSearch {
+  width: 92%;
+  height: 2.5em;
+  margin-left: 1.3em;
+  border: none;
+  margin-top: 1em;
+  background-color: rgb(187, 182, 182);
+}
+
+/* One Day Forecast Styles */
+
 
 #today {
   list-style: none;
+  width: 95%;
+  border: 1px solid black;
+  margin: 1em;
+  line-height: 3em;
 }
 
+
+
+#low {
+  background-color: rgb(42, 149, 0);
+  padding: 0.2em 1em;
+  vertical-align: middle;
+  border-radius: .3em;
+}
+
+#moderate {
+  background-color: rgb(247, 228, 1);
+  padding: 0.2em 1em;
+  vertical-align: middle;
+  border-radius: .3em;
+}
+
+#high {
+  background-color: rgb(249, 88, 3);
+  padding: 0.2em 1em;
+  vertical-align: middle;
+  border-radius: .3em;
+}
+
+#very-high {
+  background-color: rgb(217, 2, 17);
+  padding: 0.2em 1em;
+  vertical-align: middle;
+  border-radius: .3em;
+}
+
+#extreme {
+  background-color: rgb(109, 73, 203);
+  padding: 0.2em 1em;
+  vertical-align: middle;
+  border-radius: .3em;
+}
+/* Five Day Forecast Styles */
 #five-day {
   list-style: none;
+}
+
+#fiveDayHeader{
+  margin-left: 0.6em;
+  font-weight: bold;
+}
+
+#fiveDayCard {
+  background-color: rgb(51, 70, 90);
+  color: #fff;
+  margin: 1em;
+  line-height: 3em;
+  padding: .5em;
+  
+  flex: 2 0 28%;
+
 }
