--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,6 @@
 /* Header Styles */
 header {
-  background-image: linear-gradient(
-    to right,
-    rgb(59, 108, 194),
-    rgb(48, 61, 141),
-    rgb(35, 7, 85)
-  );
+  background-image: linear-gradient(to right, rgb(59, 108, 194), rgb(48, 61, 141), rgb(35, 7, 85));
   height: 4.5em;
   padding: 0.75em;
 }
@@ -18,7 +13,17 @@ h1 {
 
 /* Search for a City Styles */
 main {
-  background-image: url('../images/cloudyday.jpeg');
+  /* background-image: url('../images/cloudyday.jpeg'); */
+  height: 100vh;
+  /* width: 100vw; */
+  /* max-height: 100%; */
+  /* background-size: auto; */
+  /* background-repeat: no-repeat; */
+  background: url('../images/cloudyday.jpeg') no-repeat center center fixed; 
+  /* -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover; */
+  background-size: cover;
 }
 
 #searchBar {
@@ -70,13 +75,12 @@ input {
 
 #today {
   list-style: none;
-  width: 91%;
+  width: 70vw;
   border: 1px solid black;
   margin: 1.5em;
   padding: 1em;
   line-height: 3em;
   background-color: #fff;
-
 }
 
 #low {
